# VertexGameLauncher

./: .gitignore  README.md  package-lock.json
TechNetLauncher/: package-lock.json  package.json
TechNetLauncher/public/: splashscreen.html
TechNetLauncher/src/: main.ts
TechNetLauncher/src-tauri/: Cargo.toml  tauri.conf.json
TechNetLauncher/src-tauri/src/: main.rs
TechNetLauncher/src/styles/: splashscreen.css
backend/: Cargo.toml  tauri.conf.json
backend/src/: main.rs  system_tray.rs
frontend/: Cargo.toml  index.html  trunk.toml
frontend/public/: splashscreen.html
frontend/src/: main.rs
technet_luncher/: index.html  package-lock.json  package.json  splashscreen.html  vite.config.ts
technet_luncher/src/: App.vue  main.ts  models.ts
technet_luncher/src-tauri/: Cargo.toml  tauri.conf.json
technet_luncher/src-tauri/src/: lib.rs  main.rs  system_tray.rs
technet_luncher/src/components/: GamesPage.vue  Greet.vue  SideBar.vue
technet_luncher/src/plugins/: vuetify.js
vertex_launcher/: 1.0.0  package-lock.json  package.json  splashscreen.html  vite.config.ts
vertex_launcher/public/: Games.json
vertex_launcher/src/: App.css  App.css.map  App.scss  App.tsx  game.tsx  main.tsx
vertex_launcher/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
vertex_launcher/src-tauri/capabilities/: default.json
vertex_launcher/src-tauri/src/: commands.rs  download.rs  env.rs  errors.rs  games.rs  lib.rs  main.rs  system_tray.rs
vertex_launcher/src/components/: download.jsx  download.tsx  downloadProgress.tsx  gameContext.jsx  gameContext.tsx  gameList.jsx  (+3 more)
(+2 files in other folders)
